Fixed bug where parameter menu was too long due to previous change

--- a/web/style.css
+++ b/web/style.css
@@ -191,6 +191,11 @@ img.button-image {
     grid-template-columns: calc(var(--scale) * 15) calc(var(--scale) * 15) calc(var(--scale) * 15);
 }
 
+.menu#parameter-menu .menu-bottom-section {
+    display: grid;
+    grid-template-rows: calc(var(--scale) * 5) auto;
+}
+
 p {
     font-size: calc(var(--scale) * 2);
 }
